completed the template for acct-info.vue

--- a/src/components/template.html
+++ b/src/components/template.html
@@ -148,9 +148,7 @@
               </div>
               <div class="col-auto">
                 <button type="button" class="btn btn-light px-lg-5 ml-lg-5 ml-4">
-                  <span class="text-muted ">
-                    Copy
-                  </span>
+                  <span class="text-muted ">Copy</span>
                 </button>
               </div>
             </div>
