refactor: Efficiently animate neumorp button press

--- a/src/app/assets/scss/_functions.scss
+++ b/src/app/assets/scss/_functions.scss
@@ -1,15 +1,41 @@
-@function top-shadow($depth) {
+@use 'sass:list';
+
+@function top-shadow($depth, $inset: null) {
   $primary-offset: nth(3 4 4 4 6 10, $depth) * -1px;
   $blur: nth(1 2 3 4 5, $depth) * 2px;
-  $color: rgba($clr-top-shadow, nth(0.6 0.6 0.8 0.8 0.9, $depth));
+  $color: rgba($top-shadow-color, nth(0.6 0.6 0.8 0.6 0.9, $depth));
 
-  @return $primary-offset $primary-offset $blur $color;
+  @return $inset $primary-offset $primary-offset $blur $color;
 }
 
-@function bottom-shadow($depth) {
+@function bottom-shadow($depth, $inset: null) {
   $primary-offset: nth(3 4 4 4 6 10, $depth) * 1px;
   $blur: nth(1 2 3 4 5, $depth) * 2px;
-  $color: rgba($clr-bot-shadow, nth(0.6 0.6 0.8 0.8 0.9, $depth));
+  $color: rgba($bot-shadow-color, nth(0.6 0.6 0.8 0.6 0.9, $depth));
 
-  @return $primary-offset $primary-offset $blur $color;
+  @return $inset $primary-offset $primary-offset $blur $color;
+}
+
+@function neumorp-initial($depth) {
+  $blurs: 4px, 15px, 20px;
+  $colors: rgba($top-shadow-color, 0.2), rgba($bot-shadow-color, 0),
+    rgba($top-shadow-color, 0);
+  $offsets: ();
+  @each $blur in $blurs {
+    $offsets: append(
+      $offsets,
+      0 0 $blur nth($colors, list.index($blurs, $blur)),
+      comma
+    );
+  }
+  @return $offsets, bottom-shadow($depth), top-shadow($depth);
+}
+
+@function neumorp-press($depth) {
+  @if $depth < 4 or $depth > 6 {
+    @warn "Invalid $depth `#{$depth}` value, choose from 4 to 6.";
+  } @else {
+    @return top-shadow($depth, inset), bottom-shadow($depth, inset),
+      0px 0px 4px rgba($top-shadow-color, 0.2);
+  }
 }
