--- a/src/app/assets/scss/_mixins.scss
+++ b/src/app/assets/scss/_mixins.scss
@@ -1,9 +1,29 @@
 @mixin neumorp-shadow($depth, $inset: null) {
   @if $depth < 1 {
     box-shadow: none;
-  } @else if $depth > 5 {
+  } @else if $depth > 6 {
     @warn "Invalid $depth `#{$depth}` value.";
   } @else {
-    box-shadow: $inset bottom-shadow($depth), $inset top-shadow($depth);
+    box-shadow: bottom-shadow($depth, $inset), top-shadow($depth, $inset);
+  }
+}
+
+@mixin neumorp-button(
+  $width,
+  $height,
+  $radius,
+  $depth,
+  $bg-color: $primary-bg-color
+) {
+  width: $width;
+  height: $height;
+  border-radius: $radius;
+  border: 0;
+  background-color: $bg-color;
+
+  @if $depth < 4 or $depth > 6 {
+    @warn "Invalid $depth `#{$depth}` value, choose from 4 to 6.";
+  } @else {
+    box-shadow: neumorp-initial($depth);
   }
 }
