refactor: Set a mixin for custom directive v-click & remove redundant

--- a/src/app/assets/scss/_mixins.scss
+++ b/src/app/assets/scss/_mixins.scss
@@ -27,3 +27,15 @@
     box-shadow: neumorp-initial($depth);
   }
 }
+
+@mixin neumorp-keyframes($depth) {
+  @keyframes buttonClicked {
+    0%,
+    100% {
+      box-shadow: neumorp-initial($depth);
+    }
+    50% {
+      box-shadow: neumorp-press($depth);
+    }
+  }
+}
