--- a/src/app/assets/scss/_mixins.scss
+++ b/src/app/assets/scss/_mixins.scss
@@ -1,7 +1,5 @@
 @mixin neumorp-shadow($depth, $inset: null) {
-  @if $depth < 1 {
-    box-shadow: none;
-  } @else if $depth > 6 {
+  @if depth-verify($depth) {
     @warn "Invalid $depth `#{$depth}` value.";
   } @else {
     box-shadow: bottom-shadow($depth, $inset), top-shadow($depth, $inset);
@@ -21,8 +19,8 @@
   border: 0;
   background-color: $bg-color;
 
-  @if $depth < 4 or $depth > 6 {
-    @warn "Invalid $depth `#{$depth}` value, choose from 4 to 6.";
+  @if depth-verify($depth) {
+    @warn "Invalid $depth `#{$depth}` value.";
   } @else {
     box-shadow: neumorp-initial($depth);
   }
