--- a/src/app/assets/scss/_variables.scss
+++ b/src/app/assets/scss/_variables.scss
@@ -2,7 +2,7 @@
 $josefin-sans: 'Josefin Sans', sans-serif;
 $nunito-sans: 'Nunito Sans', sans-serif;
 
-// COLORS
+// Main colors
 //Dark-grey
 $primary-color: #546e7a;
 //Light-grey
@@ -10,8 +10,8 @@ $secondary-color: #90a4ae;
 //Purple
 $tertiary-color: #9574cd;
 
-// Alert
-$danger: #dd2626;
+// Alert colors
+$danger: #dc3545;
 $success: #2e9f36;
 
 // Background
