--- a/src/app/assets/scss/_typography.scss
+++ b/src/app/assets/scss/_typography.scss
@@ -1,4 +1,4 @@
-.primary-heading {
+.heading-primary {
   display: flex;
   flex-direction: column;
   &-main {
@@ -11,6 +11,7 @@
   }
 }
 
+// TODO: change in AccountList heading
 .secondary-heading {
   &-main {
     font-size: 1.8rem;
