--- a/src/app/assets/scss/_utilities.scss
+++ b/src/app/assets/scss/_utilities.scss
@@ -44,13 +44,14 @@
 //   animation: inset-primary 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19);
 // }
 
-// NOTE: Component or just it is
-.seperator {
-  width: 100%;
-  height: 8px;
-  border-radius: 50px;
-  @include neumorp-shadow(2, inset);
-}
+// NOTE: Use on Account.vue only
+// .seperator {
+//   height: 8px;
+//   width: 100%;
+//   margin-top: 0.6rem;
+//   border-radius: 50px;
+//   @include neumorp-shadow(2, inset);
+// }
 
 .border-solid {
   border: 1px solid black;
