new: created NeumorpButton as base button component

--- a/src/app/assets/scss/_base.scss
+++ b/src/app/assets/scss/_base.scss
@@ -62,5 +62,7 @@ span {
 button {
   font-size: 1.6rem;
   cursor: pointer;
+  border: 0;
   color: $primary-color;
+  background-color: $primary-bg-color;
 }
