style: redesign the layout of AccountInfo section

--- a/src/app/assets/scss/_typography.scss
+++ b/src/app/assets/scss/_typography.scss
@@ -1,6 +1,7 @@
 .heading-primary {
   display: flex;
   flex-direction: column;
+  flex-grow: 2;
   &-main {
     font-size: 2rem;
     font-weight: 700;
