--- a/src/app/assets/scss/_variables.scss
+++ b/src/app/assets/scss/_variables.scss
@@ -1,4 +1,4 @@
-// FONTS
+// Fonts
 $josefin-sans: 'Josefin Sans', sans-serif;
 $nunito-sans: 'Nunito Sans', sans-serif;
 
@@ -11,58 +11,13 @@ $secondary-color: #90a4ae;
 $tertiary-color: #9574cd;
 
 // Alert colors
-$danger: #dc3545;
-$success: #2e9f36;
+$danger-color: #dc3545;
+$success-color: #2e9f36;
+$info-color: #2f89ff;
 
 // Background
 $primary-bg-color: #e6eef8;
 
-// box-shadow
+// Box-shadow
 $top-shadow-color: #fff;
 $bot-shadow-color: #a3b1c6;
-
-// button depth
-$float: 4;
-$contained: 3;
-$mini: 3;
-
-// OLD COLORS
-$color-primary: #2f89ff;
-$color-secondary: #9574cd;
-$color-dark-grey: #546e7a;
-$color-light-grey: #90a4ae;
-$color-danger: #dd2626;
-$color-success: #2e9f36;
-$color-primary-bg: #e6eef8;
-
-// box-shadow old
-$clr-bot-shadow: #a3b1c6;
-$clr-top-shadow: #fff;
-
-$bsd-rounded-btn: inset 0 0 15px rgba(163, 177, 198, 0),
-  inset 0 0 20px rgba(255, 255, 255, 0), -4px -4px 8px rgba(255, 255, 255, 0.6),
-  4px 4px 8px rgba(163, 177, 198, 0.6),
-  inset 0px 0px 4px rgba(255, 255, 255, 0.2);
-
-$bsd-primary-btn: inset 0 0 15px rgba(163, 177, 198, 0),
-  inset 0 0 20px rgba(255, 255, 255, 0), -4px -4px 6px rgba(255, 255, 255, 0.5),
-  4px 4px 6px rgba(163, 177, 198, 0.5),
-  inset 0px 0px 4px rgba(255, 255, 255, 0.2);
-
-$bsd-inset-rounded-btn: inset -4px -4px 8px rgba(255, 255, 255, 0.6),
-  inset 4px 4px 8px rgba(163, 177, 198, 0.6),
-  0px 0px 4px rgba(255, 255, 255, 0.2);
-
-$bsd-inset-primary-btn: inset -4px -4px 6px rgba(255, 255, 255, 0.5),
-  inset 4px 4px 6px rgba(163, 177, 198, 0.5),
-  0px 0px 5px rgba(255, 255, 255, 0.6);
-
-$bsd-small-btn: 4px 4px 6px rgba(163, 177, 198, 0.5),
-  -4px -4px 6px rgba(255, 255, 255, 0.6),
-  inset 3px 3px 8px rgba(209, 217, 230, 0.2),
-  inset -8px -8px 8px rgba(255, 255, 255, 0.2);
-
-$bsd-inset-small-btn: 4px 4px 8px rgba(163, 177, 198, 0.5),
-  -4px -4px 13px rgba(255, 255, 255, 0.6),
-  inset 3px 3px 3px rgba(163, 177, 198, 0.4),
-  inset -3px -3px 4px rgba(255, 255, 255, 0.6);
