--- a/src/app/assets/scss/main.scss
+++ b/src/app/assets/scss/main.scss
@@ -1,1 +1,1 @@
-@import 'base', 'animation', 'utilities', 'typography', 'layout';
+@import 'base', 'transition', 'utilities', 'typography', 'layout';
