--- a/src/app/assets/scss/_transition.scss
+++ b/src/app/assets/scss/_transition.scss
@@ -71,3 +71,16 @@
   transform: translateY(-20px);
   opacity: 0;
 }
+
+// LIST-TRANSITION
+.list-transition-enter {
+  opacity: 0;
+  transform: translateY(10px);
+}
+.list-transition-leave-to {
+  opacity: 0;
+  transform: translateX(-30px);
+}
+.list-transition-leave-active {
+  position: absolute;
+}
