--- a/src/app/assets/scss/_variables.scss
+++ b/src/app/assets/scss/_variables.scss
@@ -12,8 +12,8 @@ $tertiary-color: #9574cd;
 
 // Alert colors
 $danger-color: #dc3545;
-$success-color: #2e9f36;
-$info-color: #2f89ff;
+$success-color: #21a67a;
+$info-color: #007bc2;
 
 // Background
 $primary-bg-color: #e6eef8;
