feat: added FetchLoading component and Progress Bar

--- a/src/app/assets/scss/_animation.scss
+++ b/src/app/assets/scss/_animation.scss
@@ -21,3 +21,16 @@
     transform: translateX(-8px);
   }
 }
+
+@keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
