--- a/src/app/assets/scss/_utilities.scss
+++ b/src/app/assets/scss/_utilities.scss
@@ -1,3 +1,10 @@
 .border-solid {
   border: 1px solid black;
 }
+
+#nprogress .bar {
+  background-color: $tertiary-color !important;
+}
+#nprogress .spinner {
+  display: none !important;
+}
